WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315108
ASSERTION FAILED: m_renderBlock.ptr() != subtreeScrollbarChangesState->subtreeRoot.ptr() can get triggered after it was added
https://bugs.webkit.org/show_bug.cgi?id=315108
Summary
ASSERTION FAILED: m_renderBlock.ptr() != subtreeScrollbarChangesState->subtre...
Sammy Gill
Reported
2026-05-19 09:53:47 PDT
We added the assertion in
313323@main
as a sanity check but it seems like there is content that can trigger it
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-19 09:53:58 PDT
<
rdar://problem/177442629
>
Sammy Gill
Comment 2
2026-05-19 09:54:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65149
EWS
Comment 3
2026-05-19 19:07:49 PDT
Committed
313537@main
(537cc2c75cc3): <
https://commits.webkit.org/313537@main
> Reviewed commits have been landed. Closing PR #65149 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug